@@ -39,7 +39,7 @@
                 <th i18n:translate="">Description</th>
                 <td tal:content="context/Description" />
             </tr>
-            <tr>
+            <tr tal:condition="view/show_author">
                 <th i18n:translate="">Author</th>
                 <td tal:define="author view/get_author">
                     <span tal:condition="not: author/url"
@@ -71,7 +71,7 @@
 	<a id="preview" tal:attributes="href string:${context/absolute_url}/big_img">
 <img tal:define="scale context/@@images"
      tal:replace="structure python: scale.scale('file',
-                  width=200, direction='down').tag()" />        		
+                  width=200, direction='down').tag()" />
 </a>
 </td>
 			</tr>
