@@ -5,7 +5,8 @@ Changelog
 1.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Hide author in file view if anonymous and allowAnonymousViewAbout is False.
+  [Julian Infanger]
 
 
 1.6.1 (2013-04-17)
